fix background color on mobile

--- a/web/components/app/App.sass
+++ b/web/components/app/App.sass
@@ -1,5 +1,3 @@
 #app
-  background-color: $background
-
   > div
     height: 100%
