--- a/web/styles/index.sass
+++ b/web/styles/index.sass
@@ -23,10 +23,6 @@ time, mark, audio, video
   -webkit-font-smoothing: antialiased
 
 html
-  height: 100vh
-  width: 100vw
-
-body
   height: 100%
   width: 100%
 
@@ -53,3 +49,9 @@ body
 
 // containers
 @import ../containers/index
+
+
+body
+  min-height: 100%
+  width: 100%
+  background-color: $background
